methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:2: error: ';' expected but ',' found.
             {avance();setCouleurBrosse(c);baisseBrosse();leveBrosse();gauche();avance();gauche();avance();baisseBrosse();leveBrosse();gauche();avance();gauche(),avance()}
                                                                                                                                                                 ^